<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/side_menu_item_search_orders"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/side_menu_item_orders_search" />
        <item
            android:id="@+id/side_menu_item_orders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/side_menu_item_orders" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/side_menu_item_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/side_menu_item_logout" />
        </menu>
    </item>

</menu>
