<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/confirm_sms_enter_confirmation_code"
        android:padding="8dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmation_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ev_confirm_dialog_confirmation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_sms_confirmation_code"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionDone"
            />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm_dialog_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/confirm_sms_send"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm_dialog_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?selectableItemBackground"
            android:text="@string/confirm_sms_resend"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm_dialog_resend_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_sms_resend_timer"
        android:padding="8dp"
        />
</LinearLayout>